syntax = "proto3";
package umpc;

option java_package = "us.huseli.umpc.proto";
option java_multiple_files = true;

message DynamicPlaylistProto {
    enum Key {
        UNDEFINED_KEY = 0;
        ARTIST = 1;
        ALBUM_ARTIST = 2;
        ALBUM = 3;
        SONG_TITLE = 4;
        FILENAME = 5;
    }

    enum Comparator {
        UNDEFINED_COMPARATOR = 0;
        EQUALS = 1;
        NOT_EQUALS = 2;
        CONTAINS = 3;
        NOT_CONTAINS = 4;
    }

    enum Operator {
        UNDEFINED_OPERATOR = 0;
        AND = 1;
        OR = 2;
    }

    message Filter {
        Key key = 1;
        string value = 2;
        Comparator comparator = 3;
    }

    repeated Filter filters = 1;
    Operator operator = 2;
    bool shuffle = 3;
    int32 current_offset = 4;
    repeated string filenames = 5;
    string server = 6;
}
